--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,63 @@
 }
 
 body {
-  font-size: 16px;
+  background-color: hsl(220, 27%, 96%);
+  color: hsl(0, 0%, 13%);
+  font-family: 'Open Sans', Sans-Serif;
+  font-size: 15px;
+}
+
+h1 {
+  font-family: 'Raleway', Sans-Serif;
+  font-size: 44px;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+/* ======================================
+ Card
+====================================== */
+.card {
+  background-color: hsl(0, 0%, 100%);
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
+  display: flex;
+  padding: 2rem;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 1rem;
+}
+
+.card__img {
+  border-radius: 50%;
+}
+
+.card__heading {
+  font-size: 1.25rem;
+
+  /* font-weight: 700; */
+  margin-bottom: 1rem;
+}
+
+.card__p {
+  color: hsl(0, 0%, 29%);
+  margin-bottom: 0.5rem;
+}
+
+.card__link {
+  color: hsl(236, 33%, 53%);
+  margin-bottom: 0.5rem;
 }
 
 /* ======================================
