--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,15 @@ body {
   font-size: 15px;
 }
 
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
 h1 {
   font-family: 'Raleway', Sans-Serif;
   font-size: 44px;
+  margin-bottom: 2rem;
 }
 
 a {
@@ -19,6 +25,10 @@ a {
 }
 
 p {
+  margin: 0;
+}
+
+ul {
   margin: 0;
 }
 
@@ -32,6 +42,7 @@ p {
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   display: flex;
   padding: 2rem;
+  width: 450px;
 }
 
 .card__body {
@@ -39,6 +50,7 @@ p {
   flex-direction: column;
   justify-content: center;
   margin-left: 1rem;
+  text-align: left;
 }
 
 .card__img {
@@ -60,6 +72,21 @@ p {
 .card__link {
   color: hsl(236, 33%, 53%);
   margin-bottom: 0.5rem;
+}
+
+/* ======================================
+ List
+====================================== */
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style: none;
+  padding-left: 0;
+}
+
+.list__item {
+  margin-bottom: 1rem;
 }
 
 /* ======================================
