--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,19 @@ ul {
  Card
 ====================================== */
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(236, 33%, 100%);
   border: 0;
   border-radius: 5px;
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   display: flex;
   padding: 2rem;
+  transition: all 0.5s ease;
   width: 450px;
+}
+
+.card:hover {
+  background-color: hsl(236, 100%, 95%);
+  box-shadow: 0 11px 20px 3px hsla(0, 0%, 0%, 0.2);
 }
 
 .card__body {
@@ -59,8 +65,6 @@ ul {
 
 .card__heading {
   font-size: 1.25rem;
-
-  /* font-weight: 700; */
   margin-bottom: 1rem;
 }
 
@@ -93,21 +97,53 @@ ul {
  Modal
 ====================================== */
 .modal {
-  background: #fafafa;
+  background: hsl(0, 0%, 100%);
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
   display: none;
-  height: 600px;
-  left: 25%;
-  margin: 0 auto;
+  height: 500px;
+  left: 50%;
+  margin-left: -225px;
   position: fixed;
-  top: 25%;
-  width: 600px;
+  top: 10%;
+  width: 450px;
   z-index: 10;
 }
 
 .modal__body {
   height: 100%;
   padding: 2rem;
+  text-align: center;
   width: 100%;
+}
+
+.modal__img {
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+
+.modal__heading {
+  color: hsl(0, 0%, 29%);
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.modal__item {
+  color: hsl(0, 0%, 45%);
+  margin-bottom: 1rem;
+}
+
+.modal__link {
+  color: hsl(236, 33%, 53%);
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.modal__hr {
+  border-color: hsla(0, 0%, 100%, 0.43);
+  margin: 2rem 0;
 }
 
 .modal__overlay {
@@ -122,9 +158,29 @@ ul {
 }
 
 .modal__close-btn {
+  background-color: transparent;
+  border: 0;
+  border-radius: 0 5px;
+  color: hsl(0, 0%, 45%);
+  font-weight: 700;
+  padding: 10px 15px;
   position: absolute;
-  right: -10px;
-  top: -10px;
+  right: 0;
+  top: 0;
+  transition: all 0.5s;
+}
+
+.modal__close-btn:hover {
+  background-color: hsl(236, 33%, 53%);
+  color: hsl(0, 0%, 100%);
+}
+
+.modal__close-btn:active {
+  background-color: hsl(236, 33%, 43%);
+  box-shadow: inset 0 2px 4px 3px hsla(0, 0%, 0%, 0.08);
+  color: hsl(0, 0%, 90%);
+  font-weight: 700;
+  outline: none;
 }
 
 .modal--open {
