--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ ul {
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   display: flex;
   padding: 2rem;
+  text-align: left;
   transition: all 0.5s ease;
   width: 450px;
 }
@@ -56,11 +57,12 @@ ul {
   flex-direction: column;
   justify-content: center;
   margin-left: 1rem;
-  text-align: left;
 }
 
 .card__img {
   border-radius: 50%;
+  margin-bottom: 1rem;
+  width: 128px;
 }
 
 .card__heading {
@@ -76,6 +78,17 @@ ul {
 .card__link {
   color: hsl(236, 33%, 53%);
   margin-bottom: 0.5rem;
+}
+
+@media (max-width: 575.98px) {
+  .card {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+    width: 300px;
+  }
 }
 
 /* ======================================
@@ -104,10 +117,10 @@ ul {
   display: none;
   height: 500px;
   left: 50%;
-  margin-left: -225px;
+  margin-left: -160px;
   position: fixed;
   top: 10%;
-  width: 450px;
+  width: 320px;
   z-index: 10;
 }
 
