--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ body {
 
 main {
   padding: 2rem;
-  text-align: center;
 }
 
 h1 {
@@ -30,6 +29,37 @@ p {
 
 ul {
   margin: 0;
+}
+
+/* ======================================
+ Button
+====================================== */
+
+.btn {
+  border: 0;
+  border-radius: 5px;
+  height: 3rem;
+  padding: 0 32px;
+  transition: background-color 0.5s;
+  transition: box-shadow 0.25s;
+}
+
+.btn:active {
+  box-shadow: inset 0 2px 4px 3px hsla(0, 0%, 0%, 0.5);
+  outline: none;
+}
+
+.btn--primary {
+  background-color: hsl(236, 33%, 53%);
+  color: hsl(0, 0%, 100%);
+}
+
+.btn--primary:hover {
+  background-color: hsl(236, 33%, 43%);
+}
+
+.btn--right {
+  border-radius: 0 5px 5px 0;
 }
 
 /* ======================================
@@ -107,6 +137,31 @@ ul {
 }
 
 /* ======================================
+ Filter
+====================================== */
+.filter {
+  margin-bottom: 2rem;
+}
+
+.filter__label {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.filter__input {
+  border: 0;
+  border-radius: 5px 0 0 5px;
+  box-shadow: inset 0 2px 4px 0 hsla(0, 0%, 0%, 0.08);
+  height: 3rem;
+  padding: 1rem;
+  transition: background-color 0.5s;
+}
+
+.filter__input:active {
+  background-color: hsl(236, 100%, 95%);
+}
+
+/* ======================================
  Modal
 ====================================== */
 .modal {
@@ -181,6 +236,7 @@ ul {
   right: 0;
   top: 0;
   transition: all 0.5s;
+  transition: box-shadow 0.25s;
 }
 
 .modal__close-btn:hover {
@@ -190,9 +246,8 @@ ul {
 
 .modal__close-btn:active {
   background-color: hsl(236, 33%, 43%);
-  box-shadow: inset 0 2px 4px 3px hsla(0, 0%, 0%, 0.08);
+  box-shadow: inset 0 2px 4px 3px hsla(0, 0%, 0%, 0.5);
   color: hsl(0, 0%, 90%);
-  font-weight: 700;
   outline: none;
 }
 
