--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,36 @@ ul {
   outline: none;
 }
 
+.modal__nav {
+  background-color: hsl(236, 33%, 53%);
+  border: 0;
+  border-radius: 50%;
+  color: hsl(0, 0%, 90%);
+  font-size: 2rem;
+  height: 40px;
+  position: absolute;
+  right: 0;
+  top: 62%;
+  transition: background-color 0.5s;
+  width: 40px;
+}
+
+.modal__nav:hover {
+  background-color: hsl(236, 33%, 43%);
+}
+
+.modal__nav:active {
+  box-shadow: inset 0 2px 4px 3px hsla(0, 0%, 0%, 0.5);
+}
+
+.modal__nav--prev {
+  left: 10px;
+}
+
+.modal__nav--next {
+  right: 10px;
+}
+
 .modal--open {
   display: block;
 }
