--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
 }
 
 main {
+  min-height: 100vh;
   padding: 2rem;
 }
 
@@ -29,6 +30,14 @@ p {
 
 ul {
   margin: 0;
+}
+
+.background__p {
+  color: hsl(0, 0%, 60%);
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  text-shadow: 0 1px 0 hsl(0, 0%, 100%);
 }
 
 /* ======================================
@@ -133,7 +142,60 @@ ul {
 }
 
 .list__item {
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-name: fadein;
   margin-bottom: 1rem;
+  opacity: 0;
+}
+
+/* Cascade animation for list items */
+.list li:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.list li:nth-child(2) {
+  animation-delay: 20ms;
+}
+
+.list li:nth-child(3) {
+  animation-delay: 40ms;
+}
+
+.list li:nth-child(4) {
+  animation-delay: 60ms;
+}
+
+.list li:nth-child(5) {
+  animation-delay: 80ms;
+}
+
+.list li:nth-child(6) {
+  animation-delay: 100ms;
+}
+
+.list li:nth-child(7) {
+  animation-delay: 120ms;
+}
+
+.list li:nth-child(8) {
+  animation-delay: 140ms;
+}
+
+.list li:nth-child(9) {
+  animation-delay: 160ms;
+}
+
+.list li:nth-child(10) {
+  animation-delay: 180ms;
+}
+
+.list li:nth-child(11) {
+  animation-delay: 200ms;
+}
+
+.list li:nth-child(12) {
+  animation-delay: 220ms;
 }
 
 /* ======================================
@@ -283,4 +345,18 @@ ul {
 
 .modal--open {
   display: block;
+}
+
+/* ======================================
+ Animations
+====================================== */
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
