--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@ ul {
   color: hsl(0, 0%, 90%);
   font-size: 1.25rem;
   height: 40px;
+  outline: none;
   position: absolute;
   right: 0;
   top: 62%;
@@ -338,11 +339,11 @@ ul {
 }
 
 .modal__nav--prev {
-  left: 10px;
+  left: 30px;
 }
 
 .modal__nav--next {
-  right: 10px;
+  right: 30px;
 }
 
 .modal--open {
@@ -364,7 +365,7 @@ ul {
 }
 
 /* ======================================
- Loader
+ Loader from https://projects.lukehaas.me/css-loaders/
 ====================================== */
 .loader {
   -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
