--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,8 @@ ul {
   animation-delay: 220ms;
 }
 
+/* END cascade */
+
 /* ======================================
  Filter
 ====================================== */
